# leptos_playground

./: readme.md
leptos_axum_memo_counter/: Cargo.toml  README.md  run_dev.sh
leptos_axum_memo_counter/app/: Cargo.toml
leptos_axum_memo_counter/app/src/: lib.rs
leptos_axum_memo_counter/server/: Cargo.toml
leptos_axum_memo_counter/server/src/: counter.rs  main.rs
leptos_axum_memo_counter/style/: main.scss
leptos_blog_moonbound/: Cargo.toml  readme.md
leptos_blog_moonbound/src/: app.rs  main.rs
leptos_blog_moonbound/src/components/: blog_post.rs  edit_post.rs
leptos_blog_moonbound/src/repository/: blog_repo.rs
leptos_struct_table_serverfn_sqlx/: .gitignore  Cargo.toml  db.sqlite3  db.sqlite3-wal  dev.sh  package-lock.json  readme.md
leptos_struct_table_serverfn_sqlx/src/: app.rs  classes.rs  data_provider.rs  database.rs  main.rs
leptos_struct_table_serverfn_sqlx/style/: output.css
leptos_todo_app_sqlite_csr_struct_table/: .gitignore  Cargo.toml  Todos.db  package-lock.json  readme.md  style.css
leptos_todo_app_sqlite_csr_struct_table/src/: customers.rs  database.rs  fallback.rs  lib.rs  main.rs  table_classes.rs  table_data_provider.rs  todo.rs
user_dir_lap/: .env  .gitignore  Cargo.toml  Makefile.toml  dev_css.sh  iam.db  package-lock.json  readme.md  run_css.sh  run_dev.sh  style.css
user_dir_lap/.cargo/: config.toml
user_dir_lap/assets/css/: main.css
user_dir_lap/assets/img/favicon/: site.webmanifest
user_dir_lap/backend/: .env  Cargo.toml
user_dir_lap/backend/ops/: readme.md
user_dir_lap/backend/ops/db/: apply_changes.sh
user_dir_lap/backend/ops/db/migrations/: 0001_users_tbl_create.sql
user_dir_lap/backend/src/: main.rs
user_dir_lap/e2e/: Cargo.toml
user_dir_lap/e2e/tests/fixtures/world/: mod.rs
user_dir_lap/frontend/: Cargo.toml  tbd_Trunk.toml
user_dir_lap/frontend/src/: lib.rs
user_dir_lap/frontend/src/pages/: home.rs  login.rs  mod.rs
user_dir_lap/ops/db/: add_change.sh  init.sh  readme.md
user_dir_lap/ops/db/migrations/: 0001_user_accounts_tbl.sql
user_dir_lap/public/: main.css
user_dir_lap/src/: app_err_uc.rs  errors.rs  fallback.rs  lib.rs  main.rs  server_fns_todo.rs  server_fns_todo.rs.orig  server_logging.rs  server_state.rs  ssr.rs  todo.rs  todo_server_fns.rs
user_dir_lap/src/components/: app.rs  mod.rs  navbar.rs  navusermenu.rs  todos.rs
user_dir_lap/src/domain/model/: id.rs  mod.rs  user.rs
user_dir_lap/src/dtos/: curr_user_account.rs  login_result.rs  mod.rs
user_dir_lap/src/server/: auth.rs  db.rs  fallback.rs  logging.rs  mod.rs  session.rs  ssr.rs  state.rs
user_dir_lap/src/server/auth/: auth.rs
user_dir_lap/src/server/logic/: id_gen.rs  mod.rs
user_dir_lap/src/server/model/: id.rs
user_dir_lap/src/server/user/: mod.rs  user_accounts_repo.rs  user_mgmt.rs  user_repo.rs
user_dir_lap/src/ui/: mod.rs  routes.rs  state.rs
user_dir_lap/src/ui/comps/: app.rs  error_template.rs  mod.rs  navbar.rs  navusermenu.rs  todos.rs  tw_table.rs
user_dir_lap/src/ui/logic/: accounts.rs  auth.rs  mod.rs  support.rs
user_dir_lap/src/ui/styles/: input.css  mod.rs  styles.css
user_dir_lap/src/ui/views/: accounts.rs  home.rs  login.rs  logout.rs  mod.rs  user_accounts.rs
user_dir_lap___ops/db/: readme.md
