[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "=0.8.2", features = [ "ssr" ] }
leptos_axum = "=0.8.2"
axum = "0.7.9"
tokio = { version = "=1.45.1", features = [ "full" ] }
tower = "=0.5.2"
serde = { version = "=1.0.219", features = [ "derive" ] }
serde_json = "=1.0.140"
sqlx = { version = "=0.7.4", features = [ "sqlite", "runtime-tokio-native-tls", "macros" ] }
argon2 = "=0.5.3"
uuid = { version = "=1.17.0", features = [ "v4" ] }
tower-cookies = "0.11.0"
