[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
console_log = "=1.0.0"
console_error_panic_hook = "=0.1.7"
leptos = { version = "=0.8.2", features = ["csr"] }
leptos_meta = { version = "=0.8.2" }
leptos_router = { version = "=0.8.2" }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
wasm-bindgen = "=0.2.100"
reqwasm = "0.5.0"
log = "0.4.27"
